Added dark theme

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@types/yup": "^0.29.7",
+    "axios": "^0.20.0",
     "formik": "^2.1.5",
     "next": "9.5.3",
-    "next-images": "^1.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.2.0",
