--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/yup": "^0.29.7",
     "axios": "^0.20.0",
     "formik": "^2.1.5",
+    "framer-motion": "^2.6.13",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
