--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@ant-design/icons": "^4.2.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/mongoose": "^5.7.36",
     "@types/yup": "^0.29.7",
+    "argon2": "^0.27.0",
     "axios": "^0.20.0",
     "formik": "^2.1.5",
     "framer-motion": "^2.6.13",
+    "lodash.isequal": "^4.5.0",
+    "mongoose": "^5.10.6",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
