--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash.isequal": "^4.5.0",
     "mongoose": "^5.10.6",
     "next": "9.5.3",
+    "next-iron-session": "^4.1.8",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.2.0",
