--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.2.0",
+    "swr": "^0.3.5",
     "yup": "^0.29.3"
   },
   "devDependencies": {
