--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@types/bcryptjs": "^2.4.2",
+    "@types/color": "^3.0.1",
     "@types/mongoose": "^5.7.36",
     "@types/yup": "^0.29.7",
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
+    "color": "^3.1.2",
     "formik": "^2.1.5",
     "framer-motion": "^2.6.13",
-    "lodash.isequal": "^4.5.0",
     "mongoose": "^5.10.6",
     "next": "9.5.3",
     "next-iron-session": "^4.1.8",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-google-login": "^5.1.21",
     "styled-components": "^5.2.0",
     "swr": "^0.3.5",
     "yup": "^0.29.3"
