--- a/package.json
+++ b/package.json
@@ -14,28 +14,29 @@
     "@material-ui/icons": "^4.9.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/color": "^3.0.1",
-    "@types/mongoose": "^5.7.36",
-    "@types/yup": "^0.29.7",
+    "@types/mongoose": "^5.7.37",
+    "@types/yup": "^0.29.9",
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
-    "color": "^3.1.2",
-    "formik": "^2.1.5",
-    "framer-motion": "^2.6.13",
-    "mongoose": "^5.10.6",
+    "color": "^3.1.3",
+    "deepai": "^1.0.16",
+    "formik": "^2.2.3",
+    "framer-motion": "^2.9.4",
+    "mongoose": "^5.10.13",
     "next": "9.5.3",
-    "next-iron-session": "^4.1.8",
+    "next-iron-session": "^4.1.10",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-google-login": "^5.1.21",
-    "styled-components": "^5.2.0",
-    "swr": "^0.3.5",
+    "react-google-login": "^5.1.22",
+    "styled-components": "^5.2.1",
+    "swr": "^0.3.8",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@types/node": "^14.10.1",
-    "@types/react": "^16.9.49",
-    "@types/styled-components": "^5.1.3",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.56",
+    "@types/styled-components": "^5.1.4",
     "babel-plugin-styled-components": "^1.11.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.5"
   }
 }
